syntax = "proto3";

option java_multiple_files = true;
option java_package = "HeatingService";
option java_outer_classname = "HeatingServiceImpl";

package HeatingService;

// Interface exported by the server.
service HeatingService {

  rpc Heating_turnOn (Heating_turnOnRequest) returns (Heating_turnOnReply) {}
  rpc Heating_turnUp (Heating_turnUpRequest) returns (Heating_turnUpReply) {}
  rpc Heating_turnDown (Heating_turnDownRequest) returns (Heating_turnDownReply){}
}

message Heating_turnOnRequest {
  string text = 1;
}

message Heating_turnOnReply {
  string text = 1;
}

message Heating_turnUpRequest {
  string text = 1;
}

message Heating_turnUpReply {
  string text = 1;
}

message Heating_turnDownRequest {
  string text = 1;
}

message Heating_turnDownReply {
  string text = 1;
}